Fixed search bar/font size on mobile wikipedia

--- a/wikipedia.css
+++ b/wikipedia.css
@@ -1,5 +1,6 @@
 body {
   background-color: #001F3F;
+  font-size: 1em;
 }
 
 h1 {
@@ -7,7 +8,7 @@ h1 {
   color: #fff;
   margin-top: .5em;
   margin-bottom: .2em;
-  font-size: 70px;
+  font-size: 5em;
   font-family: 'Galada', cursive;
   letter-spacing: 0px;
 }
@@ -96,7 +97,7 @@ input[type="text"]:focus{
 #output li a {
   color: #001F3F;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.2em;
   letter-spacing: .5px;
   line-height: 1.5;
   text-transform: uppercase;
@@ -109,7 +110,7 @@ input[type="text"]:focus{
 #randomLink {
   display: block;
   color: #7FDBFF;
-  font-size: 16px;
+  font-size: 1em;
   padding-top: 1em;
   width: 20%;
   margin: auto;
@@ -123,21 +124,32 @@ input[type="text"]:focus{
 /* Media Queries ****************************************************************/
 @media(max-width: 500px) {
 
+  body {
+    font-size: 1.5em;
+  }
+
+  input[type="text"]{
+    width: 90%;
+    transition: all 1s ease-in-out;
+    height: 2.5em;
+    font-weight: bolder;
+    margin-left: 0;
+
+  }
+
   h1 {
-    font-size: 35px;
+    font-size: 2.5em;
   }
 
   #main {
     width: 90%;
   }
 
-  input[type="text"] {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 1em;
-    margin-top: .5em;
+
+  #searchTerm p{
+    font-size: 4em;
   }
+
 
   #search {
     width: 50%;
@@ -150,6 +162,7 @@ input[type="text"]:focus{
   #randomLink {
     width: 80%;
     margin-top: .3em;
+    font-size: 1.2em;
   }
 
   #output {
@@ -160,30 +173,48 @@ input[type="text"]:focus{
   #output li {
     margin-left: 0;
     margin-right: 0;
-    margin-bottom: 1em;
-    padding-left: .5em;
-    padding-right: .5em;
+    margin-bottom: 3em;
+    padding-left: .8em;
+    padding-right: .8em;
     padding-top: 1em;
   }
+
+  #output li a {
+    font-size: 1.6em;
+  }
+
 
 }
 
 
 @media(min-width: 501px) and (max-width: 999px) {
+  body {
+    font-size: 1em;
+  }
 
   h1 {
-    font-size: 50px;
+    font-size: 4em;
   }
 
   #output {
     width: 100%;
   }
 
+  #output li a {
+  }
+
+  input[type="text"]{
+    margin-left: 0;
+
+  }
+
   #search {
     width: 15%;
+    margin-right: 0;
   }
 
   #randomLink {
     width: 60%;
   }
 }
+
